# YZTrader

Includes/: ILogHandler.h  YzMarcos.h  YzSDataDef.hpp  YzSObject.hpp  YzSType.h
Share/: Explain.md  ObjectPool.hpp  SpinMutex.hpp
Test/: CMakeLists.txt  TestMemoryVisibility.cpp  TestObjectPool.cpp  test
YzRunner/: YzRunner.cpp  YzRunner.h
